main.tf
resource "aws_vpc" "main" {
  cidr_block       = var.roboshop_cidr
  enable_dns_hostnames = var.enable_dns_hostnames
  tags = merge(var.common_tags,var.vpc_tags,
  {
    Name="${var.project_name}-${var.environment}"
  }
  )
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = merge(
    var.common_tags,
    var.igw_tags,
    {
      Name="${var.project_name}-${var.environment}" 
    }
  )
}

resource "aws_subnet" "public" {
  count= length(var.public_subnet_cidr)
  vpc_id     = aws_vpc.main.id
  cidr_block = var.public_subnet_cidr[count.index]
  availability_zone = local.az_names[count.index]
  tags = merge(
    var.common_tags,
    var.public_subnet_tags,
    {
      Name = "${var.project_name}-${var.environment}-public-${local.az_names[count.index]}" 
    }
  )
}

resource "aws_subnet" "private" {
  count= length(var.private_subnet_cidr)
  vpc_id     = aws_vpc.main.id
  cidr_block = var.private_subnet_cidr[count.index]
  availability_zone = local.az_names[count.index]
  tags = merge(
    var.common_tags,
    var.public_subnet_tags,
    {
      Name = "${var.project_name}-${var.environment}-private-${local.az_names[count.index]}"
    }
  )
}

resource "aws_subnet" "database" {
  count= length(var.database_subnet_cidr)
  vpc_id     = aws_vpc.main.id
  cidr_block = var.database_subnet_cidr[count.index]
  availability_zone = local.az_names[count.index]
  tags = merge(
    var.common_tags,
    var.database_subnet_tags,
    {
      Name = "${var.project_name}-${var.environment}-database-${local.az_names[count.index]}"
    }
  )
}


resource "aws_eip" "eip" {
  domain           = "vpc"
}

resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.public[0].id

  tags = merge(var.common_tags,
  var.aws_nat_gateway_tags,
  {
    Name="${var.project_name}-${var.environment}"
  }
  )


  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.gw]
}

resource "aws_route_table" "main_route_table_public" {
  vpc_id = aws_vpc.main.id


  tags = merge(var.common_tags,var.public_route_table_tags,
  {
    Name="${var.project_name}-${var.environment}-public"
  }
  )

}

resource "aws_route_table" "main_route_table_private" {
  vpc_id = aws_vpc.main.id


  tags = merge(var.common_tags,var.private_route_table_tags,
  {
    Name="${var.project_name}-${var.environment}-private"
  }
  )

}
resource "aws_route_table" "main_route_table_database" {
  vpc_id = aws_vpc.main.id


  tags = merge(var.common_tags,var.database_route_table_tags,
  {
    Name="${var.project_name}-${var.environment}-database"
  }
  )

}

resource "aws_route" "public_route" {
  route_table_id            = aws_route_table.main_route_table_public.id
  destination_cidr_block    = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.gw.id
}

resource "aws_route" "private_route" {
  route_table_id            = aws_route_table.main_route_table_private.id
  destination_cidr_block    = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.main.id
}

resource "aws_route" "database_route" {
  route_table_id            = aws_route_table.main_route_table_database.id
  destination_cidr_block    = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.main.id
}

resource "aws_route_table_association" "public" {
  count=length(var.public_subnet_cidr)
  subnet_id      = element(aws_subnet.public[*].id,count.index)
  route_table_id = aws_route_table.main_route_table_public.id
}

resource "aws_route_table_association" "private" {
  count=length(var.private_subnet_cidr)
  subnet_id      = element(aws_subnet.private[*].id,count.index)
  route_table_id = aws_route_table.main_route_table_private.id
}

resource "aws_route_table_association" "database" {
  count=length(var.database_subnet_cidr)
  subnet_id      = element(aws_subnet.database[*].id,count.index)
  route_table_id = aws_route_table.main_route_table_database.id
}
